# robotstxt

./: .gitignore  CHANGELOGS.md  Cargo.toml  README.md
ffi/: Cargo.toml
ffi/src/: lib.rs
src/: lib.rs  main.rs  matcher.rs  parser.rs
tests/: CMakeLists.txt  Cargo.toml  Makefile  rust.h
tests/src/: lib.rs  robots_test.cc  robotstxt_test.cpp  rust_robotstxt.h  simple_test.cpp
